# RepositoryPattern

./: __init__.py  base_repository.py  pyproject.toml  test_base_repository.py
test/: test_base_repository.py
